# fraud-detection-api-fastapi-docker

fraud-detection/: pyproject.toml
fraud-detection/src/: processor.py
